fixed color picker overlay z-index

--- a/src/components/layout/hueSelect.module.css
+++ b/src/components/layout/hueSelect.module.css
@@ -24,6 +24,7 @@
 
 .picker {
   position: absolute;
+  z-index: 1;
   top: calc(100% + 1rem);
   right: 0;
   display: flex;
